--- a/JavaScriptLoEsencial_EvaluaciónFinal_Omar_Pinel/index.html
+++ b/JavaScriptLoEsencial_EvaluaciónFinal_Omar_Pinel/index.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>Proyecto Final</title>
 </head>
-<body onload="onload()" class="fondo-body">
+<body onload="onload()">
   <div class="container">
   	<div class="row">
   	  <div class="col s12 m8 l8 offset-m2 offset-l2">
